@@ -90,7 +90,7 @@ void sp_sel_trans_increase_state(SPSelTrans *seltrans);
 void sp_sel_trans_set_center(SPSelTrans *seltrans, gdouble x, gdouble y);
 
 void sp_sel_trans_grab(SPSelTrans *seltrans, NR::Point const p, gdouble x, gdouble y, gboolean show_handles);
-void sp_sel_trans_transform(SPSelTrans *seltrans, NRMatrix *affine, NRPoint const *norm);
+void sp_sel_trans_transform(SPSelTrans *seltrans, NR::Matrix const &rel_affine, NR::Point const &norm);
 void sp_sel_trans_ungrab(SPSelTrans *seltrans);
 void sp_sel_trans_stamp(SPSelTrans *seltrans);
 
